--- a/tentou.html
+++ b/tentou.html
@@ -67,7 +67,7 @@
                 <p>転倒転落リスク</p>
             </div>
             <div class="result_type0 ">
-                <h4>とても高いです。</h4>
+                <h4>高いです。</h4>
             </div>
 
             <div class="return-btn">
@@ -83,7 +83,7 @@
                 <p>転倒転落リスク</p>
             </div>
             <div class="result_type1 ">
-                <h4>低～中です。</h4>
+                <h4>中です。</h4>
             </div>
             <div class="return-btn">
                 <a class="return" href="tentou.html">もどる</a>
